Added logic to ignore spaces

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="gridWrap">
     <div class="pageElement" id="topInfoBox">
-      <h2>Word count: <span id="wordCount">0</span> | Character count: <span id="characterCount">0</span>  | Significant Character Count <span id="sigCharacterCount">0</span></h2>
+      <h2>Word count: <span id="wordCount">0</span> | Character count: <span id="characterCount">0</span></h2>
     </div>
     <div class="pageElement" id="textBox">
       <textarea id="textArea" oninput="myFunction()""></textarea>
